<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:hint="@string/text_box"
        android:inputType="text"/>

    <TextView
        style="@style/Headers"
        android:text="@string/toppings"
        />

    <CheckBox
        android:id="@+id/cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cream"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:layout_marginBottom="16dp"
        />

    <CheckBox
        android:id="@+id/choco_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choco"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        style="@style/Headers"
        android:text="@string/quantity_text"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        >

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/decrement"
            android:onClick="decrement"
            />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_much"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/increment"
            android:onClick="increment"
            />

    </LinearLayout>

    <TextView
        style="@style/Headers"
        android:text="@string/summary_text"
        />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:onClick="orderNow"
            android:layout_marginRight="16dp"
            />

        <Button
            android:id="@+id/mail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_button"
            android:onClick="orderMail"
            />

    </LinearLayout>


</LinearLayout>

